# balemaleEMBEDDED

./: .gitignore  CLAUDE.md  README.md  ROS.md  calib_gui.sh  go_home.py  route_follower.py  simple_marker_drive.py  teleop.py  test_launch.sh  test_turn.py  turn_test.py
.claude/: settings.local.json
Arduino/: README.md
Arduino/Lift/: carrying.ino
Arduino/Motor/: Arduino_MoebiusTech_v2.ino  Arduino_motor.ino  Arduino_motorhat.ino  Arduino_ros2_bridge.ino
Arduino/Motor/backup/: Arduino_motor_pid.ino  encoder_test.ino
config/: cam_front_calib.txt  cam_front_calib.yaml  marker_map.yaml  marker_map_old.yaml
docs/: ARCHITECTURE.md  FIX_MARKER_ALIGN_AND_PARKING.md  MESSAGES.md  PARAMETERS.md  PROTOCOLS.md
docs/ppt/: MY_PART.md  PRESENTATION.md
docs/redesign/: API_REFERENCE.md  ARCHITECTURE.md  GITHUB_RESEARCH.md  README.md
scripts/: build.sh  full.sh  launch.sh  monitor.sh  stop.sh  test_drive.sh  test_full.sh  test_park.sh  test_perception.sh  test_server.sh  test_slot_blocked.sh
src/: PIDtuning.py
src/Control/arduino_bridge/: package.xml  setup.py
src/Control/arduino_bridge/arduino_bridge/: arduino_bridge_node.py
src/Control/arduino_bridge/config/: arduino_bridge.yaml
src/Control/arduino_bridge/launch/: arduino_bridge.launch.py
src/Control/rc_arduino_bridge/: CMakeLists.txt  package.xml
src/Control/rc_arduino_bridge/config/: arduino_bridge.yaml
src/Control/rc_arduino_bridge/src/: Arduino_motor.ino  arduino_bridge_node.cpp  backup.cpp
src/Control/rc_control_stack/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/Control/rc_control_stack/config/: control_stack.yaml  safety_manager.yaml
src/Control/rc_control_stack/launch/: control.launch.py
src/Control/rc_control_stack/rc_control_stack/: control_stack_node.py  safety_manager_node.py
src/Control/rc_control_stack/src/: control_stack_node.cpp  safety_node.cpp  safety_node_backup.cpp
src/Perception/rc_imu_mpu6050/: package.xml  setup.cfg  setup.py
src/Perception/rc_imu_mpu6050/rc_imu_mpu6050/: imu_mpu6050_node.py  mpu6050_node.py
src/Perception/rc_perception/: package.xml  setup.cfg  setup.py
src/Perception/rc_perception/backup/: lane_node_backup.py
src/Perception/rc_perception/config/: lane_v2.yaml  perception.yaml
src/Perception/rc_perception/launch/: perception.launch.py
src/Perception/rc_perception/rc_perception/: __init__.py  lane_node.py  lane_node_v2.py  lane_node_v3.py  marker_pose_node.py  parking_line_node.py  slot_marker_node.py
src/Perception/rc_perception/rc_perception/utils/: detector.py
src/Planning/rc_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/Planning/rc_localization/config/: ekf_localization.yaml  localization.yaml
src/Planning/rc_localization/launch/: localization.launch.py
src/Planning/rc_localization/rc_localization/: ekf_localization_node.py
src/Planning/rc_localization/src/: localization_node.cpp
src/Planning/rc_mission/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/Planning/rc_mission/config/: mission_manager.yaml
src/Planning/rc_mission/rc_mission/: mission_manager_node.py
src/Planning/rc_mission/src/: mission_manager_node.cpp
src/Utils/rc_bringup/: package.xml  setup.py
src/Utils/rc_bringup/config/: mission.yaml
src/Utils/rc_bringup/launch/: control.launch.py  perception.launch.py  sensors.launch.py  system.launch.py  test_drive.launch.py  utils.launch.py
src/Utils/rc_human_interface/: CMakeLists.txt  package.xml
src/Utils/rc_human_interface/src/: keyboard_teleop_node.cpp
src/Utils/rc_interfaces/: CMakeLists.txt  package.xml
src/Utils/rc_interfaces/msg/: DispatchRequest.msg  DispatchResponse.msg  ServerCmd.msg
src/Utils/rc_interfaces/msg/Line/: LaneStatus.msg  ParkingLineStatus.msg
src/Utils/rc_interfaces/msg/Marker/: MarkerDetection.msg  MarkerDetections.msg  MarkerStatus.msg
src/Utils/rc_interfaces/msg/State/: DriveCmd.msg  DrivingEvent.msg  DrivingState.msg  TaskCmd.msg  TaskStatus.msg
src/Utils/rc_mqtt_bridge/: README.md  package.xml  setup.cfg  setup.py
src/Utils/rc_mqtt_bridge/config/: mqtt_bridge.yaml
src/Utils/rc_mqtt_bridge/launch/: mqtt_bridge.launch.py
src/Utils/rc_mqtt_bridge/rc_mqtt_bridge/: mqtt_bridge_node.py  mqtt_test.py
src/bringup/robot_bringup/: package.xml  setup.py
src/bringup/robot_bringup/config/: cam_front_calib.yaml  marker_map.yaml  robot_params.yaml
src/bringup/robot_bringup/launch/: robot.launch.py  sensors.launch.py  server_test.launch.py  simulation.launch.py  system.launch.py
src/bringup/robot_bringup/test/integration/: test_topic_connections.py
src/control/motion_controller/: package.xml  setup.py
src/control/wheel_controller/: package.xml  setup.py
src/drivers/arduino_driver/: package.xml  setup.py
src/drivers/camera_driver/: package.xml  setup.py
src/drivers/imu_driver/: CMakeLists.txt  package.xml
src/drivers/imu_driver/imu_driver/: __init__.py  imu_node.py
src/drivers/loader_driver/: package.xml  setup.cfg  setup.py
src/interfaces/robot_interfaces/: CMakeLists.txt  package.xml
src/interfaces/robot_interfaces/action/: NavigateToMarker.action
src/interfaces/robot_interfaces/msg/: Detection.msg  DetectionArray.msg  DrivingState.msg  LaneStatus.msg  LoaderCommand.msg  LoaderStatus.msg  Marker.msg  MarkerArray.msg  MissionCommand.msg  MissionStatus.msg  MotorCommand.msg  ParkingStatus.msg  PlateQuery.msg  PlateResponse.msg  SlotLineStatus.msg  TrackedMarker.msg
src/interfaces/robot_interfaces/srv/: GetRobotState.srv  SetRoute.srv  SetTargetMarker.srv
src/perception/anpr_detector/: package.xml  setup.cfg  setup.py
src/perception/lane_detector/: package.xml  setup.py
src/perception/marker_detector/: package.xml  setup.py
src/perception/marker_tracker/: package.xml  setup.py
src/perception/slot_line_detector/: package.xml  setup.cfg  setup.py
src/perception/slot_line_detector/slot_line_detector/: __init__.py  detector_node.py  rectangle_detector.py
src/planning/mission_manager/: package.xml  setup.py
src/planning/server_bridge/: package.xml  setup.py
tests/: calib_cam.sh  test_cams.sh  test_encoder.py
(+23 files in other folders)
