<?xml version="1.0"?>
<package format="3">
  <name>arduino_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 node bridging DriveCmd/Twist to Arduino via UART (D/Z/P protocol).</description>

  <maintainer email="a102@todo.todo">a102</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rc_interfaces</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rc_interfaces</exec_depend>

  <!-- Optional: for tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
