<?xml version="1.0"?>
<package format="3">
  <name>rc_control_stack</name>
  <version>0.1.0</version>
  <description>Unified Control Stack (lane + align + parking + safety) for Smart Parking RC/AGV</description>

  <maintainer email="a102@ssafy.local">a102</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rc_interfaces</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
