<?xml version="1.0"?>
<package format="3">
  <name>rc_perception</name>
  <version>0.0.1</version>
  <description>Unified perception nodes</description>

  <maintainer email="a102@todo.todo">a102</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>

  <exec_depend>rc_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
