<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>rc_bringup</n>
  <version>2.0.0</version>
  <description>Bringup launch files for smart parking RC car</description>

  <maintainer email="a102@ssafy.com">a102</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <exec_depend>rc_perception</exec_depend>
  <exec_depend>rc_imu_mpu6050</exec_depend>
  <exec_depend>rc_localization</exec_depend>
  <exec_depend>rc_mission</exec_depend>
  <exec_depend>rc_control_stack</exec_depend>
  <exec_depend>arduino_bridge</exec_depend>
  <exec_depend>rc_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
