<?xml version="1.0"?>
<package format="3">
  <name>rc_interfaces</name>
  <version>0.0.1</version>
  <description>Custom message definitions for Smart Parking RC/AGV.</description>

  <maintainer email="a102@ssafy.com">a102</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Needed so other packages can find generated interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
