<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for RC car robot</description>
  <maintainer email="henry3447@naver.com">kng</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Package dependencies -->
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>marker_detector</exec_depend>
  <exec_depend>marker_tracker</exec_depend>
  <exec_depend>lane_detector</exec_depend>
  <exec_depend>motion_controller</exec_depend>
  <exec_depend>wheel_controller</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>server_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
